dodanie folderu bardzoTrudna.js

--- a/Zadanie_1_JS/index.html
+++ b/Zadanie_1_JS/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Zadanie 1 JS kopia git</h1>
-    <script src="Zadanie_1_JS/zadanie1.js"></script>
+    <script src="zadanie1.js"></script>
 </body>
 </html>
