--- a/bardzoTrudna.js/index.html
+++ b/bardzoTrudna.js/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="./scrypt.js"></script>
-    
-</body>
+<html>
+  <head>
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./src/styles.css">
+  </head>
+  <body>
+    <div id="app">
+      <section id="section_btn"></section>
+    </div>
+  <table>
+    <thead>
+      <tr id="tr-1">
+      </tr>
+      <tr id="tr-2">
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  </body>
+  <script src="src/index.js"></script>
 </html>
